Update auto download workflow for NSE data

--- a/.github/workflows/auto_download.yml
+++ b/.github/workflows/auto_download.yml
@@ -1,41 +1,37 @@
-name: Auto Download NSE Data
+name: Auto NSE Download
 
 on:
   schedule:
-    - cron: "0 3 * * *"   # Runs every day at 8:30 AM IST (3:00 UTC)
-  workflow_dispatch:       # Allow manual run
+    - cron: '0 5 * * *'  # Runs daily at 5:00 AM UTC
+  workflow_dispatch:
 
 jobs:
-  run-script:
+  download:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write       # Allows auto-commit
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: 3.11
 
       - name: Install dependencies
         run: |
-          pip install requests pandas openpyxl xlrd
+          python -m pip install --upgrade pip
+          pip install pandas requests openpyxl
 
-      - name: Run download script
-        run: |
-          python download.py
+      - name: Run NSE download
+        run: python download_nse.py
 
-      - name: Configure git
+      - name: Commit & Push updated data
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-
-      - name: Commit and push changes
-        run: |
-          git add .
-          git commit -m "Auto-update NSE data" || echo "No changes to commit"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add fiidata/*
+          git commit -m "Auto-update NSE data"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
