--- a/.github/workflows/auto_download.yml
+++ b/.github/workflows/auto_download.yml
@@ -2,7 +2,7 @@ name: Auto NSE Download
 
 on:
   schedule:
-    - cron: '0 5 * * *'  # Runs daily at 5:00 AM UTC
+    - cron: '12:40 * * *'  # Runs daily at 5:00 AM UTC
   workflow_dispatch:
 
 jobs:
