--- a/.github/workflows/auto_download.yml
+++ b/.github/workflows/auto_download.yml
@@ -1,37 +1,37 @@
-name: Auto NSE Download
+name: Test NSE Download
 
 on:
+  workflow_dispatch:       # Manual run for immediate testing
   schedule:
-    - cron: '12:40 * * *'  # Runs daily at 5:00 AM UTC
-  workflow_dispatch:
+    - cron: '30 23 * * *'  # Daily at 5:00 AM IST (UTC 23:30 previous day)
 
 jobs:
   download:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.11
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests openpyxl
+          pip install pandas requests openpyxl xlrd
 
-      - name: Run NSE download
+      - name: Run NSE download (test last 2 days)
         run: python download_nse.py
 
-      - name: Commit & Push updated data
+      - name: Commit & push updated data
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add fiidata/*
-          git commit -m "Auto-update NSE data"
+          git commit -m "Test update NSE data" || echo "No changes"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
