--- a/.github/workflows/auto_download.yml
+++ b/.github/workflows/auto_download.yml
@@ -1,37 +1,25 @@
-name: Test NSE Download
+name: NSE Auto Download
 
 on:
-  workflow_dispatch:       # Manual run for immediate testing
-  schedule:
-    - cron: '30 23 * * *'  # Daily at 5:00 AM IST (UTC 23:30 previous day)
+  workflow_dispatch:  # Allows manual run for testing
 
 jobs:
   download:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.11
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pandas requests openpyxl xlrd
-
-      - name: Run NSE download (test last 2 days)
-        run: python download_nse.py
-
-      - name: Commit & push updated data
-        run: |
+      - run: pip install --upgrade pip
+      - run: pip install pandas requests openpyxl xlrd
+      - run: python download_nse.py
+      - run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add fiidata/*
-          git commit -m "Test update NSE data" || echo "No changes"
+          git commit -m "Auto-update NSE data" || echo "No changes"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
